remove center align bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,12 +8,15 @@
   min-height: 80vh;
   width: 100%;
   display: flex;
-  //align-items: center;
+  align-items: center;
 
   .loading {
     color: #dddddd;
     vertical-align: middle;
     width: 100%;
+    div {
+      text-align: left !important;
+    }
     .loading-icon {
       color: #dddddd;
       display: block;
